# gif-3004

./: .gitignore  README.md  arm-linux-gnueabihf.cmake  arm-toolchain.cmake
tp1/: CMakeLists.txt  Makefile  makefile
tp1/src/: setr_labo1.cpp
tp2/: CMakeLists.txt
tp2/daemonFuse/: CMakeLists.txt  buildPi.sh  communications.c  communications.h  fstools.c  fstools.h  setrfs.c
tp2/serveurCurl/: CMakeLists.txt  actions.c  buildPi.sh  requete.h  servermain.c  telechargeur.c
tp3/: CMakeLists.txt  Makefile  allocateurMemoire.c  allocateurMemoire.h  build.sh  commMemoirePartagee.c  compositeur.c  decodeur.c  filtreur.c  grayscaler.c  jpgd.cpp  redimensionneur.c  utils.c
tp3/configs/: 01_sourceUnique.bash  02_deuxVideos.bash  04_mosaique.bash  05_grossevideo.bash  06_troisMediumVideos.bash  07_redimEtGris.bash
tp4/: CMakeLists.txt
tp4/pilote_interruption/: CMakeLists.txt  Makefile  setr_driver_irq.c
tp4/pilote_polling/: CMakeLists.txt  Makefile  setr_driver.c
tp5/: CMakeLists.txt  Makefile  audio_in.c  bluetooth_server.c  bluetooth_sim.c  buildClient.sh  buildServer.sh  client.c  decalageAlsa.py  fifo.c  fifo.h  filters.c  server.c
videos/: uint32_format
